--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,18 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+	android:orientation="vertical"
+    android:padding="1dp"
     tools:context="com.example.vano.workoutplanreminder.ListActivity">
 
-    <TableLayout
-		android:id="@+id/list"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+	<ListView
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1"
+		android:id="@+id/list"/>
 
-		</TableLayout>
-
-</RelativeLayout>
+</LinearLayout>
