--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+			   android:layout_width="fill_parent"
+			   android:layout_height="wrap_content"
+			   android:padding="5dp">
+	<ImageView
+		android:id="@+id/photo"
+		android:layout_width="70dp"
+		android:layout_height="50dp"/>
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:orientation="vertical"
+		android:paddingTop="2dp"
+		android:paddingRight="5dp"
+		android:paddingBottom="2dp"
+		android:paddingLeft="5dp">
+		<TextView
+			android:id="@+id/title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAlignment="gravity"
+			android:gravity="center_vertical"
+			android:layout_weight="1"
+			android:text="asdfasdfasdfsadf"
+			/>
+		<TextView
+			android:id="@+id/content"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAlignment="gravity"
+			android:gravity="center_vertical"
+			android:layout_weight="1"
+			android:text="asdfasdfaswer"
+			/>
 
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-		  android:id="@+id/list_item"
-		  android:layout_width="fill_parent"
-		  android:layout_height="fill_parent"
-		  android:weightSum="1">
-
-	<EditText
-		android:text=""
-		android:id="@+id/item_title"
-		android:layout_width="400dp"
-		android:layout_height="50dp"
-		android:clickable="true"
-		android:padding="3dip"
-		android:gravity="left"
-		/>
-	<EditText
-		android:text=""
-		android:id="@+id/item_text"
-		android:layout_width="400dp"
-		android:layout_height="50dp"
-		android:clickable="true"
-		android:padding="3dip"
-		android:gravity="right"
-		/>
+	</LinearLayout>
 
 
-</TableRow>
+</LinearLayout>
