--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,40 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-	android:background="#333"
-	android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <Button
+	<ImageButton
 		android:id="@+id/start_btn"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="Start Session"/>
-	<Button
+		android:layout_width="64dp"
+		android:layout_height="64dp"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true"
+		android:elevation="4dp"
+		android:layout_margin="16dp"
+		android:background="@drawable/ripple"
+		android:src="@drawable/start"
+		/>
+	<ImageButton
 		android:id="@+id/stop_btn"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="Stop Session"/>
-	<Button
-		android:id="@+id/list_btn"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="Edit List"/>
+		android:layout_width="64dp"
+		android:layout_height="64dp"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentBottom="true"
+		android:elevation="4dp"
+		android:layout_margin="16dp"
+		android:background="@drawable/ripple"
+		android:src="@drawable/stop"
+		/>
+<LinearLayout
+	android:orientation="vertical"
+	android:paddingLeft="@dimen/activity_horizontal_margin"
+	android:paddingRight="@dimen/activity_horizontal_margin"
+	android:paddingTop="@dimen/activity_vertical_margin"
+	android:paddingBottom="@dimen/activity_vertical_margin"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
-</LinearLayout>
+	</LinearLayout>
+
+
+</RelativeLayout>
