--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
 	<color name="material_indigo_700">#303F9F</color>
 	<color name="material_red_A500">#F44336</color>
 	<color name="text_color">#FFFFFF</color>
+	<color name="action_text_color">#444444</color>
 </resources>
